appId: org.thsthm.mobile
tags:
  - smoke
---
- launchApp
- tapOn: "Gamifikasi"
- assertVisible: "Total Poin"
- assertVisible: "Peringkat"
- tapOn: "Peringkat"
- assertVisible: "Cari anggota"
